Added relevant icon from the API

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <div class="d-flex align-items-center weather-temperature">
                 <img
                   src="https://ssl.gstatic.com/onebox/weather/48/sunny.png"
-                  alt="Clear"
+                  id="icon"
                 />
 
                 <strong id="temperature">12</strong
