--- a/index.html
+++ b/index.html
@@ -55,10 +55,7 @@
                 />
 
                 <strong id="temperature">12</strong
-                ><span class="units"
-                  ><a href="#" id="celsius-link" class="active">°C</a> |
-                  <a href="#" id="fahrenheit-link">°F</a></span
-                >
+                ><span class="units">°C</span>
               </div>
             </div>
             <div class="col-6">
